Producer fetching real hourly data and consumer fully integrate into the database